<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">migzing</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="button_login">Login</string>
    <string name="register_firstName_hint">Full Name</string>
    
    <string name="register_email_hint">Email Address</string>
    <string name="register_username_hint">Username</string>
    <string name="register_password_hint">Password</string>
    <string name="button_register">Register</string>
    <string name="tryagain">Try Again</string>
    <string name="dialog_login_error">Username and Password fields cannot be empty</string>
    <string name="cancel">Cancel</string>
    <string name="empty_txt"></string>
    <string name="previous_page_button_text">&lt;</string>
    <string name="next_page_button_text">&gt;</string>
    <string name="search_bar_term">Search TnP Noticeboard</string>
    <string name="search_more_button">View More</string>
    <string name="description_profile_pic">Profile Picture</string>
    <string name="login_remember_check">Remember me on this device</string>
    
    <string name="fontawesomeicon_directory">&#xf07c;</string>
    <string name="fontawesomeicon_file">&#xf15b;</string>
    <string name="fontawesomeicon_bold">&#xf032;</string>
    <string name="fontawesomeicon_italic">&#xf033;</string>
    <string name="fontawesomeicon_insertimage">&#xf03e;</string>
    <string name="fontawesomeicon_save">&#xf0c7;</string>
    <string name="fontawesomeicon_hyperlink">&#xf0c1;</string>
    <string name="fontawesomeicon_bulletlist">&#xf03a;</string>
    <string name="fontawesoneicon_numberedlist"></string>
    <string name="fontawesomeicon_blockquote">&#xf10d;</string>

</resources>