<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/header_register"
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/header_logo_beta" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/form_register"
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:layout_below="@id/header_register"
            android:layout_centerHorizontal="true" >

            <EditText
                android:id="@+id/registerfield_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/register_firstName_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/registerfield_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/registerfield_name"
                android:layout_centerHorizontal="true"
                android:hint="@string/register_email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/registerfield_user"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/registerfield_email"
                android:layout_centerHorizontal="true"
                android:hint="@string/register_username_hint"
                android:singleLine="true" />

            <EditText
                android:id="@+id/registerfield_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/registerfield_user"
                android:layout_centerHorizontal="true"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/doRegister"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_below="@id/registerfield_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_register_button"
                android:text="@string/button_register"
                android:textColor="#f6f9f9" />

            <TextView
                android:id="@+id/feedback_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/doRegister"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/empty_txt"
                android:textColor="@color/NiceButtonStartColor" >
            </TextView>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>